--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="col-11"> <h1>TV Series</h1> </div>
     </div>
     <table class="table", id="series">
+        <caption id="series-caption">Series Caption: </caption>
         <thead class="thead">
             <tr> 
                 <th>#</th>
